--- a/src/home.core/Views/Home/Index.cshtml
+++ b/src/home.core/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         <div class="navbar-header navbar-beautify">
             <ul class="nav navbar-nav navbar-left">
                 <li>
-                    <div class="hvr-sink">
+                    <div class="hvr-sink nav-logo">
                         <a class="nav-link-logo" href="#">DM</a>
                         <strong class="nav-link-logo-desc">DZMITRY MARTAVOI</strong>    
                     </div>
@@ -43,19 +43,34 @@
 </nav>
 
 <section id="main">
-    <div class="row">
-        <h1 class="col-md-offset-3 col-lg-offset-4 col-md-6 col-lg-4 section-intro">
-            Software Engineer, Architect,
-            .NET Guru, Skateboarder & <del>Beer</del> Coffee Drinker
-        </h1>
-    </div>
-    <div class="row">
-        <div class="col-md-offset-3 col-lg-offset-4 col-md-6 col-lg-4 social-links">
-            <ul class="list-group">
-                <li class="list-group-item"><i class="fa fa-linkedin-square fa-fw" aria-hidden="true"></i></li>
-                <li class="list-group-item"><i class="fa fa-stack-overflow fa-fw" aria-hidden="true"></i></li>
-            </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-offset-3 col-lg-offset-3 col-md-6 col-lg-7 col-sm-offset-2 col-sm-8 col-xs-offset-1 col-xs-10">
+                <h1 class="section-intro">
+                    Software Engineer, Architect,
+                    .NET Guru, Skateboarder & <del>Beer</del> Coffee Drinker
+                </h1>
+            </div>
+
         </div>
+        <div class="row">
+            <div class="col-md-offset-3 col-lg-offset-3 col-md-6 col-lg-7 col-sm-offset-2 col-sm-8 col-xs-offset-1 col-xs-10 social-links">
+                <ul class="list-group">
+                    <li class="list-group-item"><a class="hvr-grow" href="https://www.linkedin.com/in/dzmtrmartavoi"><i class="fa fa-linkedin-square fa-fw" aria-hidden="true"></i></a></li>
+                    <li class="list-group-item"><a class="hvr-grow" href="https://stackoverflow.com/users/976231/dmitry-martovoi"><i class="fa fa-stack-overflow fa-fw" aria-hidden="true"></i></a></li>
+                    <li class="list-group-item"><a class="hvr-grow" href="https://twitter.com/dzmtrmartavoi"><i class="fa fa-twitter-square fa-fw" aria-hidden="true"></i></a></li>
+                    <li class="list-group-item"><a class="hvr-grow" href="https://github.com/dzmdev"><i class="fa fa-github-square fa-fw" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="about">
+    <div>
+        <p>
+            Hello! I’m Dzmitry Martavoi a professional Software Engineer, Designer & Developer with over five years work experience. I started in my children’s room, got pro at renowned digital agencies nexum AG and Fork Unstable Media. Now I’m based in Salzburg, Austria, working for Red Bull and enjoying the life in the countryside.
+        </p>
     </div>
 </section>
 
